1. IO 2. NIO